# doomtime

./: .gitignore  CMakeLists.txt  README.md  project.yml
apps/doomtime/: pkg.yml  syscfg.yml
apps/doomtime/scripts/: background.npz  background.py  rgb_to_packed_rgb444.py
apps/doomtime/src/: bt.cpp  bt.hpp  config.hpp  data.cpp  display.cpp  display.hpp  fake_spi.c  lut.hpp  main.cpp  minimum.hpp
data/: frame_000000100
host/: CMakeLists.txt  magic
host/client/: CMakeLists.txt  client.cpp  client.py  consumer_thread.cpp  consumer_thread.hpp  exceptions.hpp  frame_buffer.cpp  frame_buffer.hpp  pid_controller.hpp  transport.cpp  transport.hpp  unset_run.hpp
host/ipc_lib/: CMakeLists.txt  producer.cpp  producer.hpp
host/ipc_shared_data/: CMakeLists.txt  doomtime_ipc.h  doomtime_shm_interface.hpp
host/test/: CMakeLists.txt  producer.cpp  test_frame_buffer.cpp  test_without_bluez.py
patches/: bluez.patch  chocolate-doom.patch  mynewt-core.patch  mynewt-nimble.patch
python/: fps.py  tuning.py
python/doomtime_codegen/: __main__.py  main.py
scripts/: Makefile  flash_bootloader_app.ocd  log.ocd  openocd-bcm.ocd
targets/doomtime/: pkg.yml  syscfg.yml  target.yml
targets/doomtime-native/: pkg.yml  syscfg.yml  target.yml
test/: CMakeLists.txt  test_lut.cpp  test_lut.py
